# vla_subtask_generalization

./: .gitignore  README.md  eval_calvin.sh  eval_libero.sh  run_calvin_eval.py  run_libero_eval.py  run_libero_eval_seq.py  segment_subtasks_libero.py  train_cogact.sh  train_octo.sh  train_pi0_fast.sh
LIBERO/: check_hid.py  requirements.txt
LIBERO/libero.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
LIBERO/libero/libero/benchmark/: __init__.py  libero_suite_task_map.py
LIBERO/libero/libero/envs/: bddl_base_domain.py  bddl_sequential_base_domain.py  bddl_utils.py  env_wrapper.py
LIBERO/notebooks/: quick_walkthrough.ipynb
LIBERO/scripts/: collect_demonstration.py
calvin/: job_script_noparaphrase.sh  job_script_with_paraphrase.sh
calvin/calvin_env/: pyproject.toml  requirements.txt
calvin/calvin_env/calvin_env.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
calvin/calvin_env/calvin_env/envs/: high_level_tasks.py  low_level_tasks.py  play_table_env.py  tasks.py
calvin/calvin_env/calvin_env/robot/: robot.py
calvin/calvin_env/calvin_env/utils/: utils.py
calvin/calvin_models/: requirements.txt
calvin/calvin_models/Calvin.egg-info/: SOURCES.txt
calvin/calvin_models/calvin_agent/: .gitignore
calvin/calvin_models/calvin_agent/datasets/: calvin_data_module.py  disk_dataset.py
calvin/calvin_models/calvin_agent/utils/: automatic_lang_annotator_mp.py  print_subtask_sequences.py  visualize_annotations.py
calvin/calvin_models/conf/: lang_ann.yaml  lang_ann_conversion.yaml  lang_ann_visualization.yaml
models/CogACT/: pyproject.toml
models/CogACT/cogact.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/CogACT/conf/: vla.py
models/CogACT/prismatic/models/backbones/vision/: __init__.py
models/CogACT/prismatic/training/strategies/: fsdp.py
models/CogACT/prismatic/util/: batching_utils.py  nn_utils.py  torch_utils.py
models/CogACT/prismatic/vla/datasets/rlds/oxe/: configs.py  mixtures.py  transforms.py
models/CogACT/scripts/: deploy.py  train.py  wrapper_script.py
models/CogACT/sim_cogact/: adaptive_ensemble.py
models/CogACT/training/strategies/: base_strategy_cogact.py  fsdp.py
models/CogACT/vla/: cogactvla.py  load.py
models/octo/: job_script.sh  jupyter.sh  requirements.txt
models/octo/examples/: 02_finetune_new_observation_action.py
models/octo/octo.egg-info/: PKG-INFO  SOURCES.txt
models/octo/octo/data/: dataset.py  (+2 more)
models/octo/scripts/: finetune.py  replay_octo_dataset.ipynb  train.py
models/openpi/: =2.19.0  pyproject.toml
models/openpi/scripts/: train.py
utils/: bootstrap_lang_ann.npy  calvin_utils.py  convert_calvin_data_to_lerobot.py  convert_rlds_data_to_lerobot.py  high2low_seeds  libero_high_sequences_init_states  libero_low_sequences_init_states  low_sequence_seeds  med_tasks_config.yaml  multistep_sequences.py  multistep_sequences_high2low_chain.py  multistep_sequences_libero.py  multistep_sequences_low_level_random.py  multistep_sequences_low_level_random_libero.py  multistep_sequences_low_level_random_new.py  render_conf.yaml  rollout_video.py  shared_utils.py
utils/dlimp/: setup.py
utils/dlimp/dlimp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+758 files in other folders)
