[project]
name = "calvin_env"
version = "0.0.1"
description = "Physical Intelligence open source repo"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "cloudpickle",
    "gitpython",
    "gym",
    "hydra-core",
    "hydra-colorlog",
    "matplotlib",
    "numba",
    "numpy",
    "numpy-quaternion",
    "omegaconf",
    "opencv-python",
    "pandas",
    "pybullet",
    "scipy",
    "rich",
]


[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py38"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "True"
order_by_type = "False"
